pablo_lara/session-02/exercise-03/wordpress-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: wordpress-deployment
  namespace: exercise-03
  labels:
    app: wordpress
    tier: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress
      tier: frontend
  template:
    metadata:
      labels:
        app: wordpress
        tier: frontend
    spec:
      containers:
      - name: wordpress
        image: javsalgar/wordpress:faulty
        volumeMounts:
        - mountPath: /bitnami/wordpress
          name: wp-data
        ports:
        - name: http-wp
          containerPort: 80
          protocol: TCP
        - name: https-wp
          containerPort: 443
          protocol: TCP
        livenessProbe:
            initialDelaySeconds: 160
            periodSeconds: 30
            httpGet:
              scheme: HTTP
              path: /wp-login.php
              port: 80
        readinessProbe:
            initialDelaySeconds: 30
            periodSeconds: 5
            httpGet:
              scheme: HTTP
              path: /wp-login.php
              port: 80
      - name: wp-socat-ambassador #Ambassador container
        image: alpine/socat
        command: ['/bin/sh','-c', 'socat tcp-listen:3306,fork,reuseaddr tcp-connect:mariadb:3306;']
      - name: wp-backup #Backup wp-content every 10 minutes
        image: instrumentisto/rsync-ssh
        volumeMounts:
        - name: wp-data
          mountPath: /wp-content
        command:
        - "/bin/sh"
        - "-c"
        - |
          while true; do
            if curl http://wordpress/wp-login.php; then
              echo "WordPress ready for backup";
              rsync -av --delete /wp-data /wp-backup;
              echo "Backup completed";
            else
              echo "Backup impossible";
            fi
            sleep 600;
          done;
        volumeMounts:
        - mountPath: /wp-data
          name: wp-data
        - mountPath: /wp-backup
          name: wp-backup
      volumes:
      - name: wp-data
        persistentVolumeClaim:
          claimName: wordpress-pvc
      - name: wp-backup
        persistentVolumeClaim:
          claimName: wp-backup
